# ChainWeaver

./: .pre-commit-config.yaml  .secrets.baseline  .vocabulary-allowlist.txt  AGENTS.md  CHANGELOG.md  CLAIMS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  constraints.txt  mkdocs.yml  pyproject.toml  pytest_chainweaver.py  server.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/instructions/: chainweaver.instructions.md  python-source.instructions.md  testing.instructions.md  tests.instructions.md
.github/workflows/: action-smoke.yml  bench.yml  ci.yml  distribution-check.yml  docs.yml  evals.yml  fuzz.yml  publish.yml  release.yml  update-prices.yml
benchmarks/: README.md  baseline.json  bench_coding_agent_macroflow.py  bench_correctness.py  bench_dag_concurrency.py  bench_naive_vs_compiled.py  report.py
benchmarks/results/: latest.json  latest.md
chainweaver/: __init__.py  _agent_config.py  _offline_llm.py  _pointer.py  _versions.py  analyzer.py  approvals.py  attest.py  builder.py  cache.py  cancellation.py  checkpoint.py  claude.py  cli.py  compat.py  compiler.py  compiler_llm.py  contracts.py  cost.py  decisions.py  decorators.py  events.py  exceptions.py  executor.py  flow.py  fuzz.py  guardrails.py  lessons.py  log_utils.py  logging.py  middleware.py  observation.py  observer.py  opencode.py  optimizer.py  plugins.py  proposals.py  registry.py  routing.py  schemas.py  (+9 more)
chainweaver/_execution/: AGENTS.md  __init__.py  context.py
chainweaver/cli/: AGENTS.md  __init__.py  __main__.py  _shared.py  attest.py  claude.py  diff.py  doctor.py  explain.py  flows.py  fuzz.py  init.py  inspect.py  opencode.py  profile.py  record.py  run.py  service.py  suggest.py  traces.py  validate.py  vscode.py
chainweaver/contrib/: __init__.py  tools.py
chainweaver/export/: __init__.py  _schema.py  anthropic.py  callable.py  openai.py
chainweaver/flow/: AGENTS.md  __init__.py  dag.py  definitions.py  drift.py  governance.py  refs.py  steps.py
chainweaver/integrations/: AGENTS.md  __init__.py  _llm_common.py  agent_kernel.py  contextweaver.py  langchain.py  llamaindex.py  llm_anthropic.py  llm_openai.py  opentelemetry.py  weaver_spec.py
chainweaver/mcp/: AGENTS.md  __init__.py  _schema.py  adapter.py  security.py  server.py
chainweaver/testing/: AGENTS.md  __init__.py  assertions.py  fakes.py  protocol_suites.py  replay.py  runner.py
dev/bench/: data.js
docs/: SPEC_COMPAT.md  boundaries.md  cli.md  coding-agent-token-reduction.md  comparisons.md  daily-driver.md  data-integrity.md  distribution.md  github-action.md  index.md  json-schema.md  lessons-from-traces.md  macro-flow-safety.md  mcp-server.md  runtime-responsibilities.md  security.md  v1-release-criteria.md  versioning-policy.md
docs/agent-context/: architecture.md  execution-semantics.md  flow-as-capability.md  invariants.md  lessons-learned.md  mcp-integration.md  module-map.md  review-checklist.md  workflows.md
docs/assets/: quickstart.cast
docs/concepts/: determinism.md  execution-trace.md  schema-validation.md  tools-and-flows.md
docs/cookbook/: 01-naive-to-compiled.md  02-mcp-style-flow.md  03-otel-tracing.md  04-testing-flows.md  05-schema-drift.md  06-dag-fanout.md  claude-code-recipe.md  index.md  langgraph-node.md  mcp-before-after.md  offline-description-optimizer.md  offline-llm-flow-proposals.md  openai-agents-tool.md  opencode-recipe.md  policy-eval-skdr.md  release-readiness.md  vscode-recipe.md
docs/getting-started/: decorator-api.md  first-flow.md  flow-builder.md  installation.md
docs/reference/: error-table.md
docs/research/: ecosystem-validation.md  flow-bundle-format-design.md  language-neutral-flow-spec-design.md  mcp-platform-governance.md  mcp-schema-survey.md  trace-isolation-copy-cost.md
evals/: __init__.py  harness.py  routing_harness.py  run_evals.py
evals/cases/: ambiguous_lookup.yaml  data_quality.yaml  distractor_fetch_parse.yaml  etl_flow.yaml  etl_pipeline.yaml  fetch_parse_extract.yaml  image_flow.yaml  (+7 more)
examples/: README.md  agent_tool_trace.jsonl  builder_flow.py  caching.py  chain_analyzer.py  chain_observer.py  checkpoint_resume.py  coding_agent_changelog.py  coding_agent_debug_log.py  coding_agent_macro_flows.py  coding_agent_pr_review.py  contrib_map_filter.py  contrib_pluck_and_set.py  data_pipeline_flow.py  decorator_tool.py  description_optimizer.py  double_add_format.flow.yaml  etl_flow.py  example_trace.json  export_openai_anthropic.py  fuzz_properties.py  fuzzable_linear.flow.yaml  llm_flow_proposals.py  mcp_adapter.py  mcp_flow_server.py  mcp_search_flow.py  mcp_style_before_after_demo.py  naive_vs_compiled.py  otel_export.py  plugin_discovery.py  simple_linear_flow.py  skdr_policy_eval_flow.py  streaming_flow.py  virtual_tool.py
notebooks/: quickstart.ipynb
playground/: README.md  app.py  core.py  requirements.txt
schemas/: flow.schema.json  proposal-descriptions.schema.json  proposal-flows.schema.json  schemastore-catalog-entry.json
scripts/: check_vocabulary.py  gen_demo_cast.py  refresh_prices.py  release.py
tests/: api_surface.py  conftest.py  helpers.py  public_api_snapshot.py  schema_ref_sentinel.py  test_agent_instructions.py  test_agent_kernel.py  test_analyzer.py  test_analyzer_schema_mappings.py  test_artifact_versioning.py  test_attest.py  test_benchmark_artifacts.py  test_branching.py  test_builder.py  test_cache.py  test_cancellation.py  test_check_vocabulary.py  test_checkpoint.py  test_claude.py  test_cli.py  test_cli_claude.py  test_cli_completion.py  test_cli_diff.py  test_cli_discovery.py  test_cli_docs.py  test_cli_doctor.py  test_cli_doctor_editors.py  test_cli_dump_schema.py  test_cli_envelope.py  test_cli_explain.py  test_cli_fuzz.py  test_cli_init.py  test_cli_opencode.py  test_cli_profile.py  test_cli_record.py  test_cli_record_security.py  test_cli_schema_ref_safety.py  test_cli_serve.py  test_cli_service.py  test_cli_suggest.py  (+104 more)
(+47 files in other folders)
